--- a/mta.yaml
+++ b/mta.yaml
@@ -43,11 +43,13 @@ resources:
       service-name: ManageOrders-hdi
       config:
         schema: MANAGEORDER
-        
+
   - name: ManageOrders-auth
     type: org.cloudfoundry.managed-service
     parameters:
       service: xsuaa
       service-plan: application
       path: ./xs-security.json
-        
+      config:
+        xsappname: ManageOrders-${org}-${space}
+        tenant-mode: dedicated
